BugFix: change color of active link menu in sidebar to have more visibility (bsc#967883)

--- a/branding/css/susemanager-theme.less
+++ b/branding/css/susemanager-theme.less
@@ -466,7 +466,7 @@ aside .nav > li > a {
 		border-bottom: 0;
 	}
 	li.active > a, #sidenav li.active > a:hover {
-		color: @spacewalk-main;
+		color: @spacewalk-aside-menu-hyperlink-active;
 		background: @spacewalk-list-menu-active;
 	}
 	li > a {
